--- a/task-02.html
+++ b/task-02.html
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task 2</title>
-    <link rel="stylesheet" href="css/common.css" />
-    <style>
-      .item {
-        font-weight: 500;
-      }
 
-      .item:not(:last-child) {
-        margin-bottom: 8px;
-      }
-    </style>
-  </head>
-  <body>
-    <p><a href="index.html">Go back</a></p>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Task 2</title>
+  <link rel="stylesheet" href="css/common.css" />
+  <style>
+    .item {
+      font-weight: 500;
+    }
 
-    <ul id="ingredients"></ul>
+    .item:not(:last-child) {
+      margin-bottom: 8px;
+    }
+  </style>
+</head>
 
-    <script src="js/task-02.js" type="module"></script>
-  </body>
+<body>
+  <p><a href="index.html">Go back</a></p>
+
+  <ul id="ingredients"></ul>
+
+  <script src="js/task-02.js" type="module"></script>
+</body>
+
 </html>
+
+
+<!-- Напиши скрипт, который для каждого элемента массива ingredients:
+
+Создаст отдельный элемент <li>. Обзательно используй метод document.createElement().
+  Добавит название ингредиента как его текстовое содержимое.
+  Добавит элементу класс item.
+  После чего вставит все
+<li> за одну операцию в список ul#ingredients. -->
