--- a/task-01.html
+++ b/task-01.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
@@ -46,3 +46,4 @@
     <script src="js/task-01.js" type="module"></script>
   </body>
 </html>
+ -->
